--- a/style.css
+++ b/style.css
@@ -396,7 +396,7 @@ header {
 .card {
   width: 100%;
   max-width: 380px;
-  height: 520px;                  /* ✅ σταθερό ύψος */
+  height: auto;                  /* ✅ σταθερό ύψος (520)*/
   background: #fff;
   border-radius: 12px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
