--- a/style.css
+++ b/style.css
@@ -1931,7 +1931,7 @@ header {
   position: relative;
 }
 
-
+/* ===== Calendar Modal ===== */
 .modal {
   display: none; position: fixed; z-index: 9999;
   left: 0; top: 0; width: 100%; height: 100%;
